# scientificcomputing_bicocca_2023

./: .gitignore  README.md
.github/workflows/: dummyaction.yml  egocentric.yml
content/: L01_python.ipynb  filelist.txt
content/01-python/: Introduction.ipynb  basics.ipynb  functions-classes.ipynb  installing.ipynb  misc.ipynb  python.ipynb  test.ipynb
content/02-numpy/: numpy.ipynb
content/04-matplotlib/: matplotlib.ipynb
content/05-scipy/: scipy.ipynb
content/06-sympy/: sympy.ipynb
content/09-packages/: python-arguments.ipynb  python-modules.ipynb  python-packages.ipynb  (+2 more)
lectures/: L01_python.ipynb  L02_numpy.ipynb  L03_matplotlib.ipynb  L04_scipy.ipynb  L05_mathematica.nb  L05_sympy.ipynb  L06_git.ipynb  L06_numba.ipynb  L06_numba_multiprocessing.ipynb  L07_git.ipynb  L07_numba_multiprocessing.ipynb  L08_pip.ipynb  L08_pytest_pip.ipynb  L08_pytest_pip_cprofile.ipynb  L09_pytest.ipynb  L09_sympy.ipynb  L10_pandas.ipynb  L11_multiprocessing.ipynb  L11_pandas.ipynb  multiply_test.py
working/: ExLesson5.nb  Exercises.ipynb  GameOfLife.ipynb  GameOfLife.py  L01_exercise.ipynb  L01_python.ipynb  L01_pythonbasics.ipynb  L02_exercise.ipynb  L02_numpy.ipynb  L03_matplotlib.ipynb  L04_scipy.ipynb  L05_mathematica.nb  L06_git.yml  L07_numba_multiprocessing.ipynb  L09_sympy.ipynb  README.md  TicTacToe_test.py  deckOfCards.py  ecc_cat_after.proof  ecc_cat_before.proof  example.prof  example_optimized.prof  poker.py
working/tictactoe_2Players/: README.md  pyproject.toml  setup.py
working/tictactoe_2Players/tictactoe_2Players/: TicTacToe_2Players.py  __init__.py
(+34 files in other folders)
